# rusty-voicevox-engine

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
assets/: terms_of_service.md
src/: main.rs  resource_manager.rs  result.rs  utils.rs  vvm_manager.rs
src/models/: audio_query.rs  engine_manifest.rs  mod.rs  speaker_info.rs
src/routes/: index.rs  info.rs  mod.rs  speakers.rs  synthesis.rs  user_dict.rs  version.rs
