[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
release = []

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
axum-macros = "0.4.1"
base64 = "0.21.7"
clap = { version = "4.5.0", features = ["derive"] }
duplicate = "1.0.0"
http = "1.0.0"
image = "0.24.9"
imageproc = "0.23.0"
once_cell = "1.19.0"
process_path = "0.1.4"
regex = "1.10.3"
rusttype = "0.9.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "fs"] }
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = "1.7.0"
voicevox_core-rs = { git = "https://github.com/sevenc-nanashi/voicevox_core-rs.git", branch = "main" }

[build-dependencies]
flate2 = "1.0.28"
serde = "1.0.196"
serde_json = "1.0.114"
tar = "0.4.40"
ureq = "2.9.6"
